add contact page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <a href="contact.html">contact</a>
         <p>saTauri</p>
     </header>
     <div>test</div>
